--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -28,13 +28,13 @@
     <div class="d-flex justify-content-around" style="height: 80%;">
         <!--코스 정보-->
         <div class="card card overflow-scroll container mx-1 row" style="width:35%; min-height:100%;">
-            <div class="border-bottom border-1 py-1 my-1" th:each="spot, loop : ${course.spotList}">
+            <div class="border-bottom border-1 py-1 my-1 d-flex" th:each="spot, loop : ${course.spotList}">
                 <div>
-                    <h5 href="#" th:text="|${spot.name}|"></h5>
-                    <a th:href="@{|http://place.map.kakao.com/${spot.urlId}|}" target="_blank">카카오 맵에서 보기</a>
+                    <h3 style="align-items: center; white-space: nowrap;" href="#" th:text="|${spot.name}|"></h3>
+                    <a th:href="@{|http://place.map.kakao.com/${spot.urlId}|}" style="white-space: nowrap;" target="_blank">카카오 맵에서 보기</a>
                 </div>
                 <!--지도-->
-                <div id="map" style="width:100%;height:350px;"></div>
+                <div id="map" style="width:100%;height:100px;"></div>
 
                 <script type="text/javascript"
                         src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c67e5e4d2bd37b972933cf07ff9ec9a7&libraries=services"></script>
