--- a/src/main/resources/templates/review/readReview.html
+++ b/src/main/resources/templates/review/readReview.html
@@ -12,7 +12,7 @@
                 <div class="card-body">
                     <!-- <form class="add-new-post" th:action="@{/review/show}" th:object="${reviewForm}"method="post">-->
 
-                    <h4  th:text="${review.title}"></h4>
+                    <h4 th:text="${review.title}"></h4>
                     <div class="d-flex justify-content-end">
                         <div class="badge bg-light text-dark p-2 text-start">
                             <div th:text="${#temporals.format(review.first_created_date, 'yyyy-MM-dd HH:mm')}"></div>
@@ -25,17 +25,20 @@
                         <fieldset class="col">
                             <label class="form-label">여행지 태그</label>
                             <div class="custom-control custom-toggle custom-toggle-sm mb-1">
-                                <input type="checkbox" id="alone" name="checkedValue"  checked="checked" disabled="disabled"
+                                <input type="checkbox" id="alone" name="checkedValue" checked="checked"
+                                       disabled="disabled"
                                        class="custom-control-input" value="혼자">
                                 <label class="custom-control-label" for="alone">혼자</label>
                             </div>
                             <div class="custom-control custom-toggle custom-toggle-sm mb-1">
-                                <input type="checkbox" id="withCouple" name="checkedValue" checked="checked" disabled="disabled"
+                                <input type="checkbox" id="withCouple" name="checkedValue" checked="checked"
+                                       disabled="disabled"
                                        class="custom-control-input" value="연인끼리">
                                 <label class="custom-control-label" for="withCouple">연인끼리</label>
                             </div>
                             <div class="custom-control custom-toggle custom-toggle-sm mb-1">
-                                <input type="checkbox" id="withFamily" name="checkedValue" checked="checked" disabled="disabled"
+                                <input type="checkbox" id="withFamily" name="checkedValue" checked="checked"
+                                       disabled="disabled"
                                        class="custom-control-input" value="가족끼리">
                                 <label class="custom-control-label" for="withFamily">가족끼리</label>
                             </div>
@@ -48,12 +51,14 @@
                         <fieldset class="col">
                             <br>
                             <div class="custom-control custom-toggle custom-toggle-sm mb-1">
-                                <input type="checkbox" id="spring" name="checkedValue" checked="checked" disabled="disabled"
+                                <input type="checkbox" id="spring" name="checkedValue" checked="checked"
+                                       disabled="disabled"
                                        class="custom-control-input" value="봄">
                                 <label class="custom-control-label" for="spring">봄</label>
                             </div>
                             <div class="custom-control custom-toggle custom-toggle-sm mb-1">
-                                <input type="checkbox" id="summer" name="checkedValue"checked="checked" disabled="disabled"
+                                <input type="checkbox" id="summer" name="checkedValue" checked="checked"
+                                       disabled="disabled"
                                        class="custom-control-input" value="여름">
                                 <label class="custom-control-label" for="summer">여름</label>
                             </div>
@@ -95,45 +100,60 @@
 
                     </div>
 
-                    <div class="row">
-                        <div class="col">
-                            <button id="혼자" class="mb-2 btn btn-sm btn-outline-primary mr-1">혼자</button>
-                            <button id="연인끼리" class="mb-2 btn btn-sm btn-outline-secondary mr-1">연인끼리</button>
-                            <button id="가족끼리" class="mb-2 btn btn-sm btn-outline-success mr-1">가족끼리</button>
-                            <button id="친구끼리" class="mb-2 btn btn-sm btn-outline-danger mr-1">친구끼리</button>
+                    <table class="table">
+                        <tbody>
+                        <tr>
+                            <td>
 
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <button id="봄" class="mb-2 btn btn-sm btn-outline-primary mr-1">봄</button>
-                            <button id="여름" class="mb-2 btn btn-sm btn-outline-secondary mr-1">여름</button>
-                            <button id="가을" class="mb-2 btn btn-sm btn-outline-success mr-1">가을</button>
-                            <button id="겨울" class="mb-2 btn btn-sm btn-outline-danger mr-1">겨울</button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
+                            </td>
+                            <td>
 
-                            <button id="인스타" class="mb-2 btn btn-sm btn-outline-primary mr-1">인스타</button>
-                            <button id="액티비티" class="mb-2 btn btn-sm btn-outline-secondary mr-1">액티비티</button>
-                            <button id="볼거리" class="mb-2 btn btn-sm btn-outline-success mr-1">볼거리</button>
-                            <button id="휴양" class="mb-2 btn btn-sm btn-outline-danger mr-1">휴양</button>
-                        </div>
-                    </div>
-                    <!-- / Small Outline Checkbox -->
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
 
-                    <hr>
-                        <div class="card-body" >
-                            <div  style="white-space: pre-line;" th:text="${review.content}"></div>
+                        <div class="row">
+                            <div class="col">
+                                <button id="혼자" class="mb-2 btn btn-sm btn-outline-primary mr-1"
+                                        onclick="location.href='링크주소';">혼자
+                                </button>
+                                <button id="연인끼리" class="mb-2 btn btn-sm btn-outline-secondary mr-1">연인끼리</button>
+                                <button id="가족끼리" class="mb-2 btn btn-sm btn-outline-success mr-1">가족끼리</button>
+                                <button id="친구끼리" class="mb-2 btn btn-sm btn-outline-danger mr-1">친구끼리</button>
+
+                            </div>
                         </div>
+                        <div class="row">
+                            <div class="col">
+                                <button id="봄" class="mb-2 btn btn-sm btn-outline-primary mr-1">봄</button>
+                                <button id="여름" class="mb-2 btn btn-sm btn-outline-secondary mr-1">여름</button>
+                                <button id="가을" class="mb-2 btn btn-sm btn-outline-success mr-1">가을</button>
+                                <button id="겨울" class="mb-2 btn btn-sm btn-outline-danger mr-1">겨울</button>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+
+                                <button id="인스타" class="mb-2 btn btn-sm btn-outline-primary mr-1">인스타</button>
+                                <button id="액티비티" class="mb-2 btn btn-sm btn-outline-secondary mr-1">액티비티</button>
+                                <button id="볼거리" class="mb-2 btn btn-sm btn-outline-success mr-1">볼거리</button>
+                                <button id="휴양" class="mb-2 btn btn-sm btn-outline-danger mr-1">휴양</button>
+                            </div>
+                        </div>
+                        <!-- / Small Outline Checkbox -->
+
+                        <hr>
+                        <div class="card-body">
+                            <div style="white-space: pre-line;" th:text="${review.content}"></div>
+                        </div>
+                    </table>
                 </div>
             </div>
-
             <button type="submit" class="btn btn-outline-primary">수정</button>
             <button type="submit" class="btn btn-outline-primary">삭제</button>
             <div class="card my-3">
-                <div class="card-body" >
+                <div class="card-body">
                     <div style="white-space: pre-line;">댓글 기능 추가 시 사용</div>
 
                     <div class="d-flex justify-content-end">
